--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
   },
   "homepage": "https://github.com/Marvel-Us2099/Bendigo_Bank_Devops_Challenge#readme",
   "dependencies": {
-    "docker": "^1.0.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.12",
-    "semver": "^7.3.5"
+    "nodemon": "^2.0.12"
   }
 }
